--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -57,7 +57,7 @@
      <Compile Include="Assets\SimpleVAS\Scripts\ConditionDictionary.cs" />
      <Compile Include="Assets\SimpleVAS\Scripts\CsvRead.cs" />
      <Compile Include="Assets\SimpleVAS\Scripts\CsvWrite.cs" />
-     <Compile Include="Assets\SimpleVAS\Scripts\DebriefingCsv.cs" />
+     <Compile Include="Assets\SimpleVAS\Scripts\DebriefingText.cs" />
      <Compile Include="Assets\SimpleVAS\Scripts\LoadScene.cs" />
      <Compile Include="Assets\SimpleVAS\Scripts\QuestionManager.cs" />
  <Reference Include="UnityEditor.StandardEvents">
