Restructured project for more modularity

--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -66,11 +66,12 @@
     <Compile Include="Assets\SimpleVAS\Scripts\CsvRead.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\CsvWrite.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\DebriefingText.cs" />
-    <Compile Include="Assets\SimpleVAS\Scripts\ForcedChoiceManager.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\ForcedChoiceAndLikertImageManager.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\ForcedChoiceAndLikertManager.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\ImageRead.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\LoadScene.cs" />
-    <Compile Include="Assets\SimpleVAS\Scripts\QuestionManager.cs" />
-    <Compile Include="Assets\SimpleVAS\Scripts\QuestionManagerImages.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\VASImageManager.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\VASManager.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/Marte/Documents/GitHub/VAS-Unity/Simple VAS/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
