Restructured project for more modularity, tested with images and questions

--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -66,12 +66,10 @@
     <Compile Include="Assets\SimpleVAS\Scripts\CsvRead.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\CsvWrite.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\DebriefingText.cs" />
-    <Compile Include="Assets\SimpleVAS\Scripts\ForcedChoiceAndLikertImageManager.cs" />
-    <Compile Include="Assets\SimpleVAS\Scripts\ForcedChoiceAndLikertManager.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\ImageRead.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\LoadScene.cs" />
-    <Compile Include="Assets\SimpleVAS\Scripts\VASImageManager.cs" />
-    <Compile Include="Assets\SimpleVAS\Scripts\VASManager.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\LoadSceneAfterTask.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\TaskManager.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/Marte/Documents/GitHub/VAS-Unity/Simple VAS/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
