--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -69,7 +69,9 @@
     <Compile Include="Assets\SimpleVAS\Scripts\ImageRead.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\LoadScene.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\LoadSceneAfterTask.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\MouseClickResponse.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\TaskManager.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\Timer.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/Marte/Documents/GitHub/VAS-Unity/Simple VAS/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
