--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\ScaleSettings.cs" />
     <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\TaskManager.cs" />
     <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\Timer.cs" />
+    <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\WaitForFixedTime.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/Marte/Documents/GitHub/VAS-Unity/Simple VAS/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
