--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\BasicDataConfigurations.cs" />
     <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\ConditionDictionary.cs" />
+    <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\CreateConditionsIteratively.cs" />
     <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\CsvRead.cs" />
     <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\CsvWrite.cs" />
     <Compile Include="Assets\SimpleVAS\SimpleVAS Scenes\Scripts\DebriefingText.cs" />
