--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\SimpleVAS\Scripts\CustomInspector\TaskSettingsEditor.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\BasicDataConfigurations.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\ConditionDictionary.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\CsvRead.cs" />
@@ -68,11 +69,11 @@
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\DebriefingText.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\ImageRead.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\LabelNames.cs" />
-    <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\LoadAfterTask.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\LoadScene.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\MouseClickResponse.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\ScaleSettings.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\TaskManager.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\TaskSettings.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\Timer.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\VRUI\Reticle.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\VRUI\SelectionRadial.cs" />
