--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -61,11 +61,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\SimpleVAS\Scripts\CustomInspector\TaskSettingsEditor.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\BasicDataConfigurations.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\ConditionDictionary.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\CsvRead.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\CsvWrite.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\CustomInspector\TaskSettingsEditor.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\DebriefingText.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\ImageRead.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\LabelNames.cs" />
