--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\SimpleVAS\Scripts\CustomInspector\SceneLoader.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\CustomInspector\TaskSettingsEditor.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\BasicDataConfigurations.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\ConditionDictionary.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\TaskManager.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\TaskSettings.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\Timer.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\WaitForFixedTime.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\VRUI\Reticle.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\VRUI\SelectionRadial.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\VRUI\VRButton.cs" />
