--- a/Simple VAS/Assembly-CSharp.csproj
+++ b/Simple VAS/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\LoadScene.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\MouseClickResponse.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\ScaleManager.cs" />
+    <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\StimulationSettings.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\TaskManager.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\TaskSettings.cs" />
     <Compile Include="Assets\SimpleVAS\Scripts\PsychBasics\Timer.cs" />
